fixed position overlapping with the first section. Push down top 90px but not a neat solution.

--- a/front-dev/w3-assignment/css-styles/style.css
+++ b/front-dev/w3-assignment/css-styles/style.css
@@ -34,8 +34,9 @@ li:hover{
 }
 
 footer {
-    position: absolute;/*some improvement is required to place this footer properly on mobile size  */
+    /*some improvement is required to place this footer properly on mobile size  */
     bottom: 0%;
+    float: left;
     
 }
 
@@ -43,17 +44,30 @@ body{
     background-color:whitesmoke;
 }
 
-#header-nav{
+header{
+    width: 100%;
+    margin-left: -10px;
+    margin-right: -10px;
+    top: 0%;
+    float: left;
+    /* position: fixed */ 
+    /* TODO: find out a better solution for this and avoid overlapping */
+
+}
+
+.header-nav{
     background-color: gray;
     padding-top: 25px;
     padding-bottom: 10px;
     border-color: #000000;
     border-style: solid;
-
+    width: 100%;    
+    top: 0%;
 }
 
 .container{
     margin: 3px;
+    top: 0%;
     position: relative;
 }
 
@@ -92,7 +106,7 @@ wit the class header list will receive this property values */
     border: 3px solid black;
     border-radius: 30%;
     position: absolute; 
-    top: 3%;
+    top: 10%;
     left: 90%;
     cursor: pointer;
     /* TODO: Find out how to fix it the right space based on percentage from rightest border on tablet view */
@@ -104,7 +118,6 @@ wit the class header list will receive this property values */
 
 .nav-drawer{
     /* TODO: Add the lines inside the navbar-toggle */
-    color: green;
 }
 
 
@@ -129,6 +142,7 @@ In this case, descendant selector is handy*/
     background-color: #5BC0EB;
     color: #ffffff;
 }
+
 /*For this css style, a box-model is used, specifically relative and absolute positions
 In order to get the get the requested layout, divs were created and configured to have a relative position and paragraphs 
 and other elements with absolute positioning. 
@@ -150,6 +164,22 @@ Considering always a parent element configured with relative positioning to have
     right: 0;
     width: max-content;
 }
+/* a complete menu section had to be created to wrap all the sub-sections in order push down the layout. 
+TODO: Identify a better solution around the sticky/fixed position on the header to avoid overlapping with following sections.
+*/
+.menu-section{ 
+    /* top: 90px; 90 px down */
+    float: left;
+    position: relative;
+}
+.second-section{
+    position: relative;
+    float: left;
+    margin: 10px;
+    width: 100%;
+}
+
+
 
 /*Below, media queries are set to aim mobile, tablet and desktop screens */
 
@@ -161,21 +191,19 @@ Tablet version =================================================================
 
     .breakfast-section{
         border: 3px black solid;
-        margin: 10px; 
-        position: absolute;
-        top: 0%;
-        left: 0%;  
-        width: 48%;
+        margin: 20px;
+        float: left;
+        width: 44%;
         height: 280px;
         overflow-y: auto;
     }
     
     .lunch-section{
         border: 3px black solid;
-        position: relative;
-        top: 0%;
-        left: 50%;
-        width: 48%;
+        margin: 20px;
+        float: left;
+        left: 48%;
+        width: 44%;
         height: 280px;
         overflow-y: auto;
           
@@ -183,34 +211,27 @@ Tablet version =================================================================
     
     .dinner-section{
         border: 3px black solid;        
-        position: relative;
-        margin-top: 10px;
-        width: 98%;
-        height: 280px;
+        float: left;
+        margin: 20px;
+        width: 93%;
+        height: auto;
         overflow-y: auto;
     }
     
     .beverages-section{
         border: 3px black solid;
-        position: relative;
-        margin-top: 10px;
-        padding: auto;
-        width: 98%;
-        height: 280px;
+        float: left;
+        margin: 20px;
+        width: 93%;
+        height: auto;
         overflow-y: auto;
         
-    }
-
-    section{
-        position: relative; 
-        padding: 10px;      
-        margin: 10px; 
-
     }
 /* on this media query, the menu list will be hidden */
     .header-list{
         display: none;
     }
+    
 }
 
 /*
@@ -218,25 +239,25 @@ Desktop version ================================================================
 */
 
 @media (min-width: 992px){
-    
+  
     .breakfast-section{
         border: 3px black solid;
-        margin: 10px; 
-        position: absolute;
-        top: 0%;
+        margin-top: 10px;
+        margin-left: 10px; 
+        float: left;
         left: 0%;
-        width: 24%;
+        width: 23%;
         height: 280px;
         overflow-y: auto;
     }
     
     .lunch-section{
         border: 3px black solid;
-        margin: 10px;
-        position: absolute;
-        top: 0%;
-        left: 25%;
-        width: 24%;
+        margin-top: 10px;
+        margin-left: 10px; 
+        float: left;
+        left: 24%;
+        width: 23%;
         height: 280px;
         overflow-y: auto;
           
@@ -244,87 +265,79 @@ Desktop version ================================================================
     
     .dinner-section{
         border: 3px black solid;
-        position: absolute;
-        left: 50%;
-        top: 0%;
-        margin: 10px;
-        width: 24%;
+        margin-top: 10px;
+        margin-left: 10px; 
+        float: left;
+        left: 48%;
+        width: 23%;
         height: 280px;
         overflow-y: auto;
     }
     
     .beverages-section{
         border: 3px black solid;
-        position: absolute;
-        left: 75%;
-        top: 0%;
-        margin: 10px;
-        padding: auto;
-        width: 24%;
+        margin-top: 10px;
+        margin-left: 10px;  
+        margin-right: 10px;
+        float: left;
+        left: 72%;
+        width: 23%;
         height: 280px;
         overflow-y: auto;
         
     }
 
-    section{
-        position: relative; 
-        padding: 10px;      
-        margin: 10px; 
-
-    }
+  
 /* on this media query, the menu list will be hidden as well as in tablet screen size */
     .navbar-toggle{
         display: none;        
     }
 
-    
-    
+    footer {
+        /*some improvement is required to place this footer properly on mobile size  */
+        bottom: 0%;
+        float: left;
+        
+    }
+
 }
 
 /*
 Mobile version ============================================================================================================
 */
 @media (max-width: 767px){
-
-    section{
-        position: absolute; 
-        margin: 1px;
-        width: 100%;
-    }
-    
+   
     .breakfast-section{
         border: 3px black solid;
         margin: 20px;
-        width: 90%;
-        position: relative;
+        width: 96%;
+        float: left;
     }
     
     .lunch-section{
         border: 3px black solid;
         margin: 20px;
-        width: 90%;
-        position: relative;
-        width: 90%;
-          
+        width: 96%;    
+        float: left;      
     }
     
     .dinner-section{
         border: 3px black solid;
-        position: relative;
         margin: 20px;
-        width: 90%;
+        width: 96%;
+        float: left;
     }
     
     .beverages-section{
         border: 3px black solid;
-        position: relative;
         margin: 20px;
-        width: 90%;
+        width: 96%;
+        float: left;
     }
 
     .header-list{
         display: none;
     }
+    
 }
 
-}
